--- a/src/app/user/my-nav-bar/my-nav-bar.component.html
+++ b/src/app/user/my-nav-bar/my-nav-bar.component.html
@@ -1,13 +1,13 @@
-<mat-toolbar color='primary'>
-     <em>Firebase Demo</em> 
+<mat-toolbar color='primary' class="mat-elevation-z8">
+    <mat-icon>home</mat-icon> <em>  Firebase Demo</em> 
 
     <div class="spacer">
        
     </div>
     
-    <a mat-button>Home</a>
-    <a mat-button>My Tickets</a>
-    <a mat-button>New Ticket</a>
-    <a mat-raised-button>Logout</a>
+    <a mat-button routerLink='home'>Home</a>
+    <a mat-button routerLink='my-tickets'>My Tickets</a>
+    <a mat-button routerLink='raise-ticket'>New Ticket</a>
+    <a mat-raised-button routerLink='sign-in'>Logout</a>
 
 </mat-toolbar>
