--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-main-component></app-main-component>
-
+<!-- <app-main-component></app-main-component> -->
+<app-admin-main></app-admin-main>
 <router-outlet></router-outlet>
