--- a/src/app/user/dash/dash.component.html
+++ b/src/app/user/dash/dash.component.html
@@ -1,35 +1,54 @@
 <div class="container">
   <div class="grid-container">
     <mat-grid-list cols="2" rowHeight="350px">
-      <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
-        <mat-card class="dashboard-card" >
+      <mat-grid-tile
+        *ngFor="let card of cards | async"
+        [colspan]="card.cols"
+        [rowspan]="card.rows"
+      >
+        <mat-card class="dashboard-card">
           <mat-card-header>
             <mat-card-title>
-              {{card.title}}
+              {{ card.title }}
             </mat-card-title>
           </mat-card-header>
           <mat-card-content class="dashboard-card-content">
-            
-            
-            <div *ngIf="card.title=='Basic Info'">
-              
+            <div *ngIf="card.title == 'Basic Info'">
               <div>
-                <img src="assets/pranayProfile.png" alt="img" width="100" height="100">
+                <img class="img-wrap" src="assets/MyProfile.jpg" alt="img" />
               </div>
 
-              <div>
-                <p>{{userData?.firstName}}</p>
-                <p>{{userData?.lastName}}</p>
-                <p>{{userData?.emailId}}</p>
-                <p>{{userData?.mobileNumber}}</p>
+              <div class="basic-info">
+                <h2>{{ userData?.firstName }}, {{ userData?.lastName }}</h2>
+                <p>Email Id: {{ userData?.emailId }}</p>
+                <p>Phone: {{ userData?.mobileNumber }}</p>
+                <p>Date of Birth: {{ getDate(userData?.dateOfBirth) }}</p>
               </div>
-  
             </div>
-  
-            <div *ngIf="card.title=='Organisation Info'"></div>
-            
-            <div *ngIf="card.title=='Awards'"></div>
-  
+
+            <div *ngIf="card.title == 'Organisation Info'">
+              <p>Role: {{ userData?.role }}</p>
+              <p>Project Name: {{ userData?.projectName }}</p>
+              <p>Project ID: {{ userData?.projectId }}</p>
+              <p>Joined Date: {{ getDate(userData?.joinedDate) }}</p>
+            </div>
+
+            <div *ngIf="card.title == 'Awards'">
+              <table>
+                <tbody>
+                  <tr *ngFor="let id of userData?.awards">
+                    <td>
+                      <div>
+                        <p>Award Name: {{ id.awardName }}</p>
+                        <p>Given By: {{ id.givenBy }}</p>
+                        <p>Date: {{ getDate(id.date) }}</p>
+                      </div>
+                    </td>
+                    <br />
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </mat-card-content>
         </mat-card>
       </mat-grid-tile>
