--- a/src/app/user/user-tickets/user-tickets.component.html
+++ b/src/app/user/user-tickets/user-tickets.component.html
@@ -1,1 +1,64 @@
-<p>user-tickets works!</p>
+<h1>List Of Tickets Available</h1>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container matColumnDef="raisedBy">
+    <th mat-header-cell *matHeaderCellDef>Raised By</th>
+    <td mat-cell *matCellDef="let element">{{ element.raisedBy }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="ticketId">
+    <th mat-header-cell *matHeaderCellDef>Ticket Id</th>
+    <td mat-cell *matCellDef="let element">{{ element.ticketId }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef>Description</th>
+    <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef>Status</th>
+    <td mat-cell *matCellDef="let element">{{ getStatus(element.status) }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="assignedTo">
+    <th mat-header-cell *matHeaderCellDef>Assigned To</th>
+    <td mat-cell *matCellDef="let element">{{ element.assignedTo }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="type">
+    <th mat-header-cell *matHeaderCellDef>Type</th>
+    <td mat-cell *matCellDef="let element">{{ element.type }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="item">
+    <th mat-header-cell *matHeaderCellDef>Item</th>
+    <td mat-cell *matCellDef="let element">{{ element.item }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="category">
+    <th mat-header-cell *matHeaderCellDef>Category</th>
+    <td mat-cell *matCellDef="let element">{{ element.category }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="loggedDate">
+    <th mat-header-cell *matHeaderCellDef>Logged Date</th>
+    <td mat-cell *matCellDef="let element">
+      {{ getDate(element.loggedDate) }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="resolvedDate">
+    <th mat-header-cell *matHeaderCellDef>Resolved Date</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.resolvedDate == null ? "" : getDate(element.resolvedDate) }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="solution">
+    <th mat-header-cell *matHeaderCellDef>Solution</th>
+    <td mat-cell *matCellDef="let element">{{ element.solution }}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
