edit dialog chnges

--- a/src/app/user/my-nav-bar/my-nav-bar.component.html
+++ b/src/app/user/my-nav-bar/my-nav-bar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color='primary' class="mat-elevation-z8">
-    <mat-icon>home</mat-icon> <em>  Firebase Demo</em> 
+    <mat-icon>home</mat-icon> <em>  Welcome Admin</em> 
 
     <div class="spacer">
        
