--- a/src/app/admin/edit-ticket/edit-ticket.component.html
+++ b/src/app/admin/edit-ticket/edit-ticket.component.html
@@ -1,5 +1,14 @@
+<h1 mat-dialog-title> Status Update </h1>
 <mat-form-field>
-    <input matInput [(value)]="newDescription" placeholder="new description">
+    <input matInput [(ngModel)]="newStatus" placeholder="status update">
 </mat-form-field>
-
-<button mat-raised-button color="primary" (click)="updateDescription()">Save</button>
+<mat-form-field>
+    <input matInput [(ngModel)]="newSolution" placeholder="Provide Solution here">
+</mat-form-field>
+<mat-form-field>
+    <input matInput [(ngModel)]="newResolvedDate" placeholder="resolved date">
+</mat-form-field>
+<div>
+    <button mat-raised-button color="primary" (click)="updateDescription()">Save</button>
+</div>
+<button mat-raised-button id="cancelButton" color="primary" (click)="onClick()">Cancel</button> 
