--- a/src/app/admin/my-nav-bar/my-nav-bar.component.html
+++ b/src/app/admin/my-nav-bar/my-nav-bar.component.html
@@ -1,11 +1,10 @@
 <mat-toolbar color='primary' class="mat-elevation-z8">
-    <mat-icon>home</mat-icon> <em> Firebase Demo</em>
+    <mat-icon>home</mat-icon> <em> Welcome Admin</em>
 
     <div class="spacer"></div>
 
     <a mat-button routerLink='employee-details'>EmployeeDetails</a>
     <a mat-button routerLink='tickets-list'>TicketsList</a>
-    <a mat-button routerLink='edit-ticket'>Edit Ticket</a>
     <a mat-raised-button routerLink='sign-out'>Logout</a>
 
 </mat-toolbar>
