Added Ticket-details Screen

--- a/src/app/user/my-nav-bar/my-nav-bar.component.html
+++ b/src/app/user/my-nav-bar/my-nav-bar.component.html
@@ -1,11 +1,12 @@
 <mat-toolbar color='primary' class="mat-elevation-z8">
-    <mat-icon>home</mat-icon> <em>  Firebase Demo</em> 
+    <mat-icon>home</mat-icon> <em>Welcome, Pranay</em> 
     
     <div class="spacer"></div>
 
     <a mat-button routerLink='home'>Home</a>
     <a mat-button routerLink='my-tickets'>My Tickets</a>
     <a mat-button routerLink='raise-ticket'>New Ticket</a>
+    <a mat-button routerLink='ticket-details'>Ticket Details</a>
     <a mat-raised-button routerLink='sign-in'>Logout</a>
 
 </mat-toolbar>
