--- a/src/app/user/user-tickets/user-tickets.component.css
+++ b/src/app/user/user-tickets/user-tickets.component.css
@@ -1,3 +1,20 @@
 table {
-    width: 100%;
-  } 
+  width: 150%;
+  margin: 2rem;
+}
+
+h1 {
+  text-align: center;
+  padding-top: 2rem;
+}
+
+.mat-cell {
+  padding-left: 30px;
+  padding-right: 30px;
+  text-overflow: ellipsis;
+}
+
+.mat-header-cell {
+  padding-left: 30px;
+  padding-right: 30px;
+}
