--- a/src/app/user/ticket-details/ticket-details.component.html
+++ b/src/app/user/ticket-details/ticket-details.component.html
@@ -44,22 +44,56 @@
       </div>
     </div>
 
+    <mat-card class="ticket-details">
+      <div class="content">
+        <div class="title">Ticket Id</div>
+        <div class="description">{{ selectedTicket?.ticketId }}</div>
+      </div>
 
-    <div class="ticket-details">
-        <p>Ticket Id: {{selectedTicket?.ticketId}}</p>
-        <p>Status: {{getStatus(selectedTicket?.status)}}</p>
-        <p>Category: {{selectedTicket?.category}}</p>
-        <p>Type: {{selectedTicket?.type}}</p>
-        <p>Item: {{selectedTicket?.item}}</p>
-        <p>Description: {{selectedTicket?.description}}</p>
-        <p>Raised By: {{selectedTicket?.raisedBy}}</p>
-        <p>Assigned To: {{selectedTicket?.assignedTo}}</p>
-        <p>Resolved Date: {{selectedTicket?.resolvedDate}}</p>
-        <p>Solution: {{selectedTicket?.solution}}</p>
+      <div class="content">
+        <div class="title">Status</div>
+        <div class="description">{{ getStatus(selectedTicket?.status) }}</div>
+      </div>
 
+      <div class="content">
+        <div class="title">Category</div>
+        <div class="description">{{ selectedTicket?.category }}</div>
+      </div>
 
-    </div>
+      <div class="content">
+        <div class="title">Type</div>
+        <div class="description">{{ selectedTicket?.type }}</div>
+      </div>
 
+      <div class="content">
+        <div class="title">Item</div>
+        <div class="description">{{ selectedTicket?.item }}</div>
+      </div>
 
+      <div class="content">
+        <div class="title">Description</div>
+        <div class="description">{{ selectedTicket?.description }}</div>
+      </div>
+
+      <div class="content">
+        <div class="title">Raised By</div>
+        <div class="description">{{ selectedTicket?.raisedBy }}</div>
+      </div>
+
+      <div class="content">
+        <div class="title">Assigned To</div>
+        <div class="description">{{ selectedTicket?.assignedTo }}</div>
+      </div>
+
+      <div class="content">
+        <div class="title">Resolved Date</div>
+        <div class="description">{{ selectedTicket?.resolvedDate }}</div>
+      </div>
+
+      <div class="content">
+        <div class="title">Solution</div>
+        <div class="description">{{ selectedTicket?.solution }}</div>
+      </div>
+    </mat-card>
   </div>
 </mat-drawer-container>
