--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -115,6 +115,10 @@
         </mat-card-content>
 
     </mat-card>
+
+    <button mat-button (click)='logout()' >
+        Log out
+    </button>
 </div>
 
 
