--- a/src/app/admin/employee-details/employee-details.component.css
+++ b/src/app/admin/employee-details/employee-details.component.css
@@ -1,3 +1,12 @@
 table {
     width: 100%;
   }  
+
+.hide{
+    display: none;
+}
+
+tr.mat-footer-cell{
+    justify-content: center;
+    font-style: italic;
+}
