--- a/src/app/admin/employee-details/employee-details.component.html
+++ b/src/app/admin/employee-details/employee-details.component.html
@@ -1,40 +1,59 @@
-<h1 style="text-align:center"><span style="background-color: violet">List Of Users Registered</span></h1>
+<h1 style="text-align: center">
+  <span style="background-color: violet">List Of Users Registered</span>
+</h1>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <ng-container matColumnDef="firstName">
-    <th mat-header-cell *matHeaderCellDef>First Name</th>
-    <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
-  </ng-container>
+<!-- <mat-form-field>
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter"/>
+</mat-form-field> -->
 
-  <ng-container matColumnDef="lastName">
-    <th mat-header-cell *matHeaderCellDef>Last Name</th>
-    <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
-  </ng-container>
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="firstName">
+      <th mat-header-cell *matHeaderCellDef>First Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="gender">
-    <th mat-header-cell *matHeaderCellDef>Gender</th>
-    <td mat-cell *matCellDef="let element">{{ element.gender }}</td>
-  </ng-container>
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef>Last Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="emailId">
-    <th mat-header-cell *matHeaderCellDef>Email ID</th>
-    <td mat-cell *matCellDef="let element">{{ element.emailId }}</td>
-  </ng-container>
+    <ng-container matColumnDef="gender">
+      <th mat-header-cell *matHeaderCellDef>Gender</th>
+      <td mat-cell *matCellDef="let element">{{ element.gender }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="empId">
-    <th mat-header-cell *matHeaderCellDef>EMP ID</th>
-    <td mat-cell *matCellDef="let element">{{ element.empId }}</td>
-  </ng-container>
+    <ng-container matColumnDef="emailId">
+      <th mat-header-cell *matHeaderCellDef>Email ID</th>
+      <td mat-cell *matCellDef="let element">{{ element.emailId }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="mobileNumber">
-    <th mat-header-cell *matHeaderCellDef>Mobile Number</th>
-    <td mat-cell *matCellDef="let element">{{ element.mobileNumber }}</td>
-  </ng-container>
+    <ng-container matColumnDef="empId">
+      <th mat-header-cell *matHeaderCellDef>EMP ID</th>
+      <td mat-cell *matCellDef="let element">{{ element.empId }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="role">
-    <th mat-header-cell *matHeaderCellDef>Role</th>
-    <td mat-cell *matCellDef="let element">{{ element.role }}</td>
-  </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+    <ng-container matColumnDef="mobileNumber">
+      <th mat-header-cell *matHeaderCellDef>Mobile Number</th>
+      <td mat-cell *matCellDef="let element">{{ element.mobileNumber }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="role">
+      <th mat-header-cell *matHeaderCellDef>Role</th>
+      <td mat-cell *matCellDef="let element">{{ element.role }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="loading">
+      <mat-footer-cell *matFooterCellDef colspan="6">Loading data...</mat-footer-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="noData">
+      <mat-footer-cell *matFooterCellDef colspan="6">No Data Available</mat-footer-cell>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-footer-row *matFooterRowDef="['loading']" [ngClass]="{'hide':dataSource!=null}"></tr>
+    <tr mat-footer-row *matFooterRowDef="['noData']" [ngClass]="{'hide':!(dataSource!=null && dataSource.data.length==0)}"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5" showFirstLastButtons> </mat-paginator>
+</div>
