--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.hide{
+    display: none;
+}
+
+tr.mat-footer-cell{
+    justify-content: center;
+    font-style: italic;
+}
