--- a/src/app/user/main-component/main-component.component.html
+++ b/src/app/user/main-component/main-component.component.html
@@ -1,2 +1,2 @@
-<app-my-nav-bar></app-my-nav-bar>
-<app-user-home></app-user-home>
+<!-- <app-my-nav-bar></app-my-nav-bar>
+<app-user-home></app-user-home> -->
