--- a/src/app/user/new-ticket/new-ticket.component.html
+++ b/src/app/user/new-ticket/new-ticket.component.html
@@ -1,3 +1,4 @@
+<app-my-nav-bar></app-my-nav-bar>
 <div class="content">
   <div *ngIf="isLoading; else elseBlock">
     <mat-spinner *ngIf="isLoading" id="spinner"></mat-spinner>
