--- a/src/app/user/ticket-details/ticket-details.component.html
+++ b/src/app/user/ticket-details/ticket-details.component.html
@@ -1,3 +1,4 @@
+<app-my-nav-bar></app-my-nav-bar>
 <mat-drawer-container class="example-container" autosize>
   <mat-drawer mode="side" opened>
     <div *ngFor="let ticket of array">
