--- a/src/app/user/user-tickets/user-tickets.component.html
+++ b/src/app/user/user-tickets/user-tickets.component.html
@@ -1,3 +1,4 @@
+<app-my-nav-bar></app-my-nav-bar>
 <h1>My Tickets</h1>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <ng-container matColumnDef="raisedBy">
