--- a/src/app/user/my-nav-bar/my-nav-bar.component.html
+++ b/src/app/user/my-nav-bar/my-nav-bar.component.html
@@ -7,6 +7,6 @@
     <a mat-button routerLink='my-tickets'>My Tickets</a>
     <a mat-button routerLink='raise-ticket'>New Ticket</a>
     <a mat-button routerLink='ticket-details'>Ticket Details</a>
-    <a mat-raised-button routerLink='sign-in'>Logout</a>
+    <a mat-raised-button (click)='signOut()'>Logout</a>
 
 </mat-toolbar>
