--- a/src/app/admin/employee-details/employee-details.component.html
+++ b/src/app/admin/employee-details/employee-details.component.html
@@ -1,10 +1,11 @@
 <h1 style="text-align: center">
   <span style="background-color: violet">List Of Users Registered</span>
 </h1>
-
-<!-- <mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter"/>
-</mat-form-field> -->
+<div class="filter">
+<mat-form-field>
+  <input matInput #filter (keyup)="applyFilter(filter.value)" placeholder="Filter Data Here"/>
+</mat-form-field>
+</div>
 
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource">
