--- a/src/app/admin/tickets-list/tickets-list.component.css
+++ b/src/app/admin/tickets-list/tickets-list.component.css
@@ -1,3 +1,20 @@
 table {
-    width: 100%;
-  }  
+  width: 50%;
+  margin: 2rem;
+}
+
+h1 {
+  text-align: center;
+  padding-top: 2rem;
+}
+
+.mat-cell {
+  padding-left: 15px;
+  padding-right: 15px;
+  text-overflow: ellipsis;
+}
+
+.mat-header-cell {
+  padding-left: 15px;
+  padding-right: 15px;
+}
