--- a/src/app/user/ticket-details/ticket-details.component.css
+++ b/src/app/user/ticket-details/ticket-details.component.css
@@ -66,27 +66,28 @@ h3 {
   font-weight: bold;
 }
 
-
-.ticket-details{
+.ticket-details {
   margin: 10px;
   padding: 20px;
 }
-/* 
-.content{
-  margin: 10px;
-} */
 
-.title{
+.content {
+  margin: 10px;
+  display: flex;
+}
+
+.title {
   color: #2e5cb8;
   font-size: 20;
   margin: 2px;
 }
 
-.description{
-  margin: 5px;
+.description {
   font: bold;
+  font-size: 30;
+  margin: 2px;
 }
 
 .example-sidenav-content {
-  /* margin: 1rem; */
+  margin: 1rem;
 }
