--- a/src/app/user/ticket-details/ticket-details.component.css
+++ b/src/app/user/ticket-details/ticket-details.component.css
@@ -91,3 +91,10 @@ h3 {
 .example-sidenav-content {
   margin: 1rem;
 }
+
+.msg {
+  text-align: center;
+  font-size: 20;
+  font-weight: bold;
+  margin: 2rem;
+}
