--- a/src/app/user/ticket-details/ticket-details.component.css
+++ b/src/app/user/ticket-details/ticket-details.component.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   border: 1px solid rgba(0, 0, 0, 0.5);
-}
+  }
 
 .key {
   background-color: #2e5cb8;
@@ -28,6 +28,7 @@ body {
 /* Remove extra left and right margins, due to padding in columns */
 .row {
   margin: 0 -5px;
+
 }
 
 /* Clear floats after the columns */
@@ -35,6 +36,7 @@ body {
   content: "";
   display: table;
   clear: both;
+
 }
 
 /* Style the counter cards */
@@ -43,6 +45,7 @@ body {
   padding: 16px;
   text-align: center;
   background-color: #f1f1f1;
+
 }
 
 /* Responsive columns - one column layout (vertical) on small screens */
@@ -58,23 +61,23 @@ h3 {
   color: #8c8c8c;
   font-size: 20;
   font-weight: bold;
+
 }
 
 .count {
   color: #8c8c8c;
   font-size: 100;
   font-weight: bold;
-}
 
+}
 
 .ticket-details{
   margin: 10px;
   padding: 20px;
 }
-/* 
+
 .content{
-  margin: 10px;
-} */
+}
 
 .title{
   color: #2e5cb8;
@@ -88,5 +91,7 @@ h3 {
 }
 
 .example-sidenav-content {
-  /* margin: 1rem; */
+  overflow-y: hidden;
+  overflow-x: hidden;
+
 }
