new ticket changes commit

--- a/src/app/user/new-ticket/new-ticket.component.html
+++ b/src/app/user/new-ticket/new-ticket.component.html
@@ -22,7 +22,7 @@
           </mat-select>
         </mat-form-field>
 
-        {{ selectedCategory }}
+        <!-- {{ selectedCategory }} -->
 
         <div *ngIf="selectedCategory != null">
           <mat-form-field appearance="fill">
@@ -56,7 +56,7 @@
               </div>
             </mat-select>
           </mat-form-field>
-          {{ selectedType }}
+          <!-- {{ selectedType }} -->
         </div>
 
         <div *ngIf="selectedType != null">
@@ -92,7 +92,7 @@
               </div>
             </mat-select>
           </mat-form-field>
-          {{ selectedItem }}
+          <!-- {{ selectedItem }} -->
         </div>
 
         <div>
