Integrated all modules

--- a/src/app/admin/edit-ticket/edit-ticket.component.html
+++ b/src/app/admin/edit-ticket/edit-ticket.component.html
@@ -9,9 +9,9 @@
     placeholder="Provide Solution here"
   />
 </mat-form-field>
-<mat-form-field>
+<!-- <mat-form-field>
   <input matInput [(ngModel)]="newResolvedDate" placeholder="resolved date" />
-</mat-form-field>
+</mat-form-field> -->
 <div>
   <button mat-raised-button color="primary" (click)="updateDescription()">
     Save
